--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>ประวัติอบรม</title>
+<title>ตารางงาน</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base target="_top">
   <link rel="shortcut icon" href="https://lh5.googleusercontent.com/d/1fn1X_OlIlUEd7cMdXYEpI3U7etbCeFF5" />
